// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Standard Button Component should append classNames when attribute is passed in 1`] = `
<button
  class="button my-additional-classname"
>
  Sample Text
</button>
`;

exports[`The Standard Button Component should disable when disabled attribute is passed in 1`] = `
<button
  class="button"
  disabled=""
>
  Sample Text
</button>
`;

exports[`The Standard Button Component should render children that are passed in 1`] = `
<button
  class="button"
>
  Sample Text
</button>
`;

exports[`The link Button Component should append classNames when attribute is passed in 1`] = `
<a
  class="button my-additional-classname"
  href="#"
>
  Sample Text
</a>
`;

exports[`The link Button Component should disable when disabled attribute is passed in 1`] = `
<a
  class="button"
  disabled=""
  href="#"
>
  Sample Text
</a>
`;

exports[`The link Button Component should render as an <a> tag with the mandatory href 1`] = `
<a
  class="button"
  href="#test-href"
>
  Sample Text
</a>
`;
